fix: temp portfolio pic

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 .category--portfolio {
-    background-image: url('https://www.cossetmoi.com/wp-content/uploads/2017/10/Depositphotos_177915112_l-2015.jpg');
+    background-image: url('../medias/images/portfolio-temp.jpg');
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
