--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@ body {
     height: 100vh; /* fallback for Js load */
     height: var(--doc-height);
     width: 100%;
-    background-color: var(--palette-3);
+    background-color: black;
     font-size: 20px;
     overflow-x: hidden;
 }
@@ -47,6 +47,19 @@ body {
     overflow-y: scroll;
 }
 
+.main--prestations {
+    background-image: url('https://st4.depositphotos.com/16122460/26783/i/450/depositphotos_267839490-stock-photo-luxury-makeup-products-and-accessories.jpg');
+    background-size: cover;
+    background-position: center;
+}
+.main--prestations::before {
+    content: '';
+    position: fixed;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    opacity: .80;
+}
 
 .category {
     display: flex;
@@ -188,29 +201,44 @@ body {
     align-items: flex-start;
     width: 100%;
     margin-bottom: 40px;
-    padding: 0 10px;
+    padding: 0 20px;
 }
 
 .prestation-tile {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     height: fit-content;
     border-radius: 10px;
     margin-bottom: 20px;
-    background-color: black;
     box-shadow: 0px 5px 11px 2px #0000006c;
 }
 
 .prestation-tile__image {
     display: flex;
-    width: 30%;
+    width: 29.5%;
     height: 100%;
     border-radius: 10px 0 0 10px;
-    background-position: right;
-    background-size: 200%;
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
+}
+
+.prestation-tile__color {
+    display: flex;
+    width: 25%;
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+}
+.--palette-3 {
+    background-color: var(--palette-3);
+}
+.--palette-2 {
+    background-color: var(--palette-2);
+}
+.--palette-1 {
+    background-color: var(--palette-1);
 }
 
 .prestation-tile__infos {
@@ -218,9 +246,9 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 70%;
+    width: 75%;
     height: 100%;
-    background-color: #0f0e0d;
+    backdrop-filter: blur(10px);
     border-radius: 0 10px 10px 0;
     padding: 10px 15px;
 }
@@ -253,19 +281,26 @@ h4, h5, h6 {
     font-weight: 300;
     margin-bottom: 5px;
 }
+h4 {
+    font-size: 18px;
+}
 
 .prestation-description {
     font-size: 16px;
 }
 .prestation-duration {
     margin-top: 10px;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 18px;
 }
 .prestation-price {
     margin-top: 10px;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 24px;
+}
+.prestation-currency {
+    margin-left: 3px;
+    font-size: 20px;
 }
 .prestation-option {
     font-size: 16px;
