--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,15 +75,15 @@ body {
     opacity: .75;
 }
 
-/* -------------------- ACVCUEIL --------------------------- */
+/* -------------------- ACCUEIL --------------------------- */
 
 .main-intro-area {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 16%;
+    height: 25%;
     width: 100%;
-    background-color: #0f0e0d;
+    background-color: #1a1817;
     padding: 0 15%;
 }
 
@@ -98,7 +98,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 42%;
+    height: 25%;
     width: 100%;
     background-color: var(--palette-4);
     padding: 0 var(--horizontal-padding);
@@ -110,6 +110,10 @@ body {
     width: 100%;
     height: 100%;
     opacity: .75;
+}
+
+.category--main {
+    height: 50%;
 }
 
 .category--prestations {
