fix: images persos

--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -47,6 +47,8 @@
 
     --font-color-footer: var(--on-primary);
 
+    --app-background-black-opacity: .60;
+
     /* ========================================================================
      SIZES
     ======================================================================== */
