--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,9 +49,11 @@ body {
 }
 
 .main--prestations {
-    background-image: url('https://st4.depositphotos.com/16122460/26783/i/450/depositphotos_267839490-stock-photo-luxury-makeup-products-and-accessories.jpg');
-    background-size: cover;
-    background-position: center;
+    /* background-image: url('https://st4.depositphotos.com/16122460/26783/i/450/depositphotos_267839490-stock-photo-luxury-makeup-products-and-accessories.jpg'); */
+    background-image: url('../medias/images/prestations.jpg');
+    background-size: 400%;
+    background-position: left 20% bottom 20%;
+    background-repeat: no-repeat;
 }
 .main--prestations::before {
     content: '';
@@ -59,11 +61,12 @@ body {
     background-color: #000000;
     width: 100%;
     height: 100%;
-    opacity: .75;
+    opacity: var(--app-background-black-opacity);
 }
 
 .main--contact {
-    background-image: url('https://thumbs.dreamstime.com/b/t%C3%A9l%C3%A9phone-portable-sur-un-journal-intime-ou-un-journal-ouvert-45047944.jpg');
+    /* background-image: url('https://thumbs.dreamstime.com/b/t%C3%A9l%C3%A9phone-portable-sur-un-journal-intime-ou-un-journal-ouvert-45047944.jpg'); */
+    background-image: url('../medias/images/contact.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -73,7 +76,7 @@ body {
     background-color: #000000;
     width: 100%;
     height: 100%;
-    opacity: .75;
+    opacity: var(--app-background-black-opacity);
 }
 
 /* -------------------- ACCUEIL --------------------------- */
@@ -109,7 +112,7 @@ body {
     background-color: #000000;
     width: 100%;
     height: 100%;
-    opacity: .75;
+    opacity: var(--app-background-black-opacity);
 }
 
 .category--main {
@@ -117,17 +120,19 @@ body {
 }
 
 .category--prestations {
-    background-image: url('https://st4.depositphotos.com/16122460/26783/i/450/depositphotos_267839490-stock-photo-luxury-makeup-products-and-accessories.jpg');
-    background-position: center;
+    /* background-image: url('https://st4.depositphotos.com/16122460/26783/i/450/depositphotos_267839490-stock-photo-luxury-makeup-products-and-accessories.jpg'); */
+    background-image: url('../medias/images/prestations.jpg');
+    background-size: 275%;
+    background-position: right 40% bottom 1%;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .category--contact {
-    background-image: url('https://thumbs.dreamstime.com/b/t%C3%A9l%C3%A9phone-portable-sur-un-journal-intime-ou-un-journal-ouvert-45047944.jpg');
-    background-position: center;
+    /* background-image: url('https://thumbs.dreamstime.com/b/t%C3%A9l%C3%A9phone-portable-sur-un-journal-intime-ou-un-journal-ouvert-45047944.jpg'); */
+    background-image: url('../medias/images/contact.jpg');
+    background-size: 150%;
+    background-position: left 20% top 30%;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .category__sub-div {
