--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,7 +101,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 25%;
+    height: 30%;
     width: 100%;
     background-color: var(--palette-4);
     padding: 0 var(--horizontal-padding);
@@ -116,7 +116,7 @@ body {
 }
 
 .category--main {
-    height: 50%;
+    height: 45%;
 }
 
 .category--prestations {
@@ -149,8 +149,8 @@ body {
 .category__sub-div__colored-sub-div {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     height: 100%;
     background-color: var(--palette-1);
@@ -162,6 +162,16 @@ body {
 .sub-div--contact {
     background-color: var(--palette-2);
 }
+
+.colored-sub-div_plus-icon {
+    opacity: .5;
+    border: 2px solid #ffffff;
+    padding: 8px;
+    border-radius: 800px;
+    width: 35px;
+    height: 35px;
+}
+
 .animate--colored-div {
     animation: home-colored-div-animation .5s forwards;
 }
@@ -357,6 +367,7 @@ h4 {
     margin-top: 5px;
     font-size: 14px;
     text-align: end;
+    white-space: nowrap;
 }
 
 .image-tile-part {
@@ -369,24 +380,32 @@ h4 {
     overflow-x: scroll;
 }
 
-.prestation-tile__image {
-    display: flex;
-    width: 29.5%;
-    height: 100%;
-    border-radius: 10px 0 0 10px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
 .prestation-picture {
     display: flex;
+    min-height: 100%;
     height: 100%;
     min-width: 150px;
     width: 150px;
     background-position: center;
     background-size: cover;
+    /* background-repeat: no-repeat; */
     /* border-radius: 10px; */
+}
+.prestation-picture::before {
+    content: '';
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    display: flex;
+    width: 10%;
+    height: 50%;
+    
+    background-image: url(../medias/images/GUI/magnifying-glass-solid.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    filter: invert();
+    opacity: .5;
 }
 
 .fullscreen-blacked-div {
@@ -430,7 +449,7 @@ h4 {
 }
 
 .social-icon {
-    width: 50px;
+    width: 35px;
 }
 
 .contact-info {
