--- a/CSS/style.css
+++ b/CSS/style.css
@@ -365,7 +365,7 @@ input:checked + .slider:before {
 
         &#maquillages-bloc-header { background-image: url("../medias/images/maquillages.webp"); background-position: center; background-size: cover; }
         &#mariages-bloc-header { background-image: url("../medias/images/mariages.webp"); background-position: center; background-size: cover; }
-        &#mains-bloc-header { background-image: url("../medias/images/ongles.webp"); background-position: center; background-size: cover; }
+        &#mains-bloc-header { background-image: url("../medias/images/mains.webp"); background-position: center; background-size: cover; }
         &#epilation-bloc-header { background-image: url("../medias/images/epilation.webp"); background-position: center; background-size: cover; }
         &#enfants-bloc-header { background-image: url("../medias/images/enfants.webp"); background-position: center; background-size: cover; }
         &#cours-bloc-header { background-image: url("../medias/images/cours.webp"); background-position: center; background-size: cover; }
@@ -667,11 +667,11 @@ input:checked + .slider:before {
     
         /* &#phoneButton { } */
         &#instagramButton { 
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png');
+            background-image: url('../medias/images/instagram.webp');
             background-size: cover;
         }
         &#facebookButton { 
-            background-image: url('https://logodownload.org/wp-content/uploads/2014/09/facebook-logo-3-1.png');
+            background-image: url('../medias/images/facebook.webp');
             background-size: cover;
         }
         /* &#emailButton { } */
